fix z-index

--- a/header.css
+++ b/header.css
@@ -53,7 +53,7 @@ tr p {
 	font-weight:100;
 	position:relative;
 	text-align: center;
-    z-index:3;
+    z-index:2;
 }
 
 .activeHeaderColumn {
